# detEfficiency

./: CMakeLists.txt  Detector_Efficiency.workspace  Makefile  det_Eff.mk  det_Eff.project
Debug/: det_Eff  src_main.cpp.o.d
include/: main.h
src/: main.cpp
